# vkmedia

./: CMakeLists.txt  LICENSE  README.md  bad.c  draft.c  encoder.h  good.c  main.c  ok.c  vkserver.c  vkserver.h  vkstream.c  vkstream.h
example/: CMakeLists.txt  example.c  example.h  main.c  util.c  util.h
src/: CMakeLists.txt
src/include/: vkmedia.h  vkmedia.hpp
src/include/vkmedia/: application.h  core.h  encoder.h  server.h  stream.h  swapchain.h
src/vkmedia/: application.c  core.c  encoder.c  internal.c  internal.h  server.c  swapchain.c
